Исправлено несколько багов и добавлена фича Теперь можно указывать пользователей, сообщения от которых Вы не хотите показывать.

--- a/markup/message.phtml
+++ b/markup/message.phtml
@@ -1,5 +1,6 @@
 <?php
 
+    global $datacontainer;
     $time = new TimeAnalyze($messages[$i]['date']);
     $showpic = false;
     if (isset($messages[$i + 1])) {
@@ -17,23 +18,27 @@
                         <tbody>
                             <tr>
                                 <td class="left-part">
-                                    <img class="user-photo" src="<?=$userdata->find('id', $messages[$i]['from_id'])['photo_50']?>">
+                                    <img class="user-photo" src="<?=$datacontainer->getObjById($messages[$i]['from_id'])->getProfilePicture()?>">
                                     <div class="check">
-                                        <img src="/images/checked.png" class="checked-head">
+                                        <img src="images/checked.png" class="checked-head">
                                     </div>
                                 </td>
                                 <td class="right-part">
                                     <div class="user-head-block">
-                                        <a class="user-name-href" href="https://vk.com/id<?=$messages[$i]['from_id']?>"><?=$userdata->find('id', $messages[$i]['from_id'])['first_name']?> <?=$userdata->find('id', $messages[$i]['from_id'])['last_name']?></a>
+                                        <a class="user-name-href" href="https://vk.com/id<?=$messages[$i]['from_id']?>"><?php echo $datacontainer->getObjById($messages[$i]['from_id'])->getName(); ?></a>
                                         <span class="user-head-timemark"><?=$time->getTime();?></span>
                                     </div>
-                                    <div class="msg-head-content"><?php
-                                        echo str_replace("\n", '<br>', $messages[$i]['text']);
-                                    ?> <?php
-                                    if (isset($messages[$i]['attachments'][0]['photo'])) {
-                                        echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
-                                    }
-                                ?></div>
+                                    <?php if (!in_array($messages[$i]['from_id'], BLACKLIST)) { ?>
+                                        <div class="msg-head-content"><?php
+                                            echo str_replace("\n", '<br>', $messages[$i]['text']);
+                                        ?><?php
+                                            if (isset($messages[$i]['attachments'][0]['photo'])) {
+                                                echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
+                                            }
+                                        ?></div>
+                                    <?php } else { ?>
+                                        <div class="msg-head-content">Сообщение не может быть показано.</div>
+                                    <?php } ?>
                                 </td>
                             </tr>
                         </tbody>
@@ -46,17 +51,21 @@
                         <tr>
                             <td class="left-part">
                                 <div class="check">
-                                    <img src="/images/checked.png" class="checked-body">
+                                    <img src="images/checked.png" class="checked-body">
                                 </div>
                             </td>
                             <td class="right-part">
-                                <div class="msg-body-content"><?php
-                                    echo str_replace("\n", '<br>', $messages[$i]['text']);
-                                ?><?php
-                                    if (isset($messages[$i]['attachments'][0]['photo'])) {
-                                        echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
-                                    }
-                                ?></div>
+                                <?php if (!in_array($messages[$i]['from_id'], BLACKLIST)) { ?>
+                                    <div class="msg-head-content"><?php
+                                        echo str_replace("\n", '<br>', $messages[$i]['text']);
+                                    ?><?php
+                                        if (isset($messages[$i]['attachments'][0]['photo'])) {
+                                            echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
+                                        }
+                                    ?></div>
+                                <?php } else { ?>
+                                    <div class="msg-head-content">Сообщение не может быть показано.</div>
+                                <?php } ?>
                             </td>
                         </tr>
                     </tbody>
@@ -70,23 +79,28 @@
                     <tbody>
                         <tr>
                             <td class="left-part">
-                                <img class="user-photo" src="<?=$userdata->find('id', $messages[$i]['from_id'])['photo_50']?>">
+                                <img class="user-photo" src="<?=$datacontainer->getObjById($messages[$i]['from_id'])->getProfilePicture()?>">
                                 <div class="check">
-                                    <img src="/images/checked.png" class="checked-head">
+                                    <img src="images/checked.png" class="checked-head">
                                 </div>
                             </td>
                             <td class="right-part">
                                 <div class="user-head-block">
-                                    <a class="user-name-href" href="https://vk.com/id<?=$messages[$i]['from_id']?>"><?=$userdata->find('id', $messages[$i]['from_id'])['first_name']?></a>
+                                    <a class="user-name-href" href="https://vk.com/id<?=$messages[$i]['from_id']?>"><?php echo
+                                        $datacontainer->getObjById($messages[$i]['from_id'])->getName(); ?></a>
                                     <span class="user-head-timemark"><?=$time->getTime();?></span>
                                 </div>
-                                <div class="msg-head-content"><?php
-                                    echo str_replace("\n", '<br>', $messages[$i]['text']);
-                                ?><?php
-                                    if (isset($messages[$i]['attachments'][0]['photo'])) {
-                                        echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
-                                    }
-                                ?></div>
+                                <?php if (!in_array($messages[$i]['from_id'], BLACKLIST)) { ?>
+                                    <div class="msg-head-content"><?php
+                                        echo str_replace("\n", '<br>', $messages[$i]['text']);
+                                    ?><?php
+                                        if (isset($messages[$i]['attachments'][0]['photo'])) {
+                                            echo '<img src="'.(array_pop($messages[$i]['attachments'][0]['photo']['sizes'])['url']).'">';
+                                        }
+                                    ?></div>
+                                <?php } else { ?>
+                                    <div class="msg-head-content">Сообщение не может быть показано.</div>
+                                <?php } ?>
                             </td>
                         </tr>
                     </tbody>
